syntax = "proto3";

package eidos.market.v1;

option go_package = "github.com/eidos-exchange/eidos/proto/market/v1;marketv1";

// 行情服务
service MarketService {
    // 获取市场列表
    rpc ListMarkets(ListMarketsRequest) returns (ListMarketsResponse);

    // 获取 24h Ticker
    rpc GetTicker(GetTickerRequest) returns (GetTickerResponse);
    rpc ListTickers(ListTickersRequest) returns (ListTickersResponse);

    // 获取 K 线数据
    rpc GetKlines(GetKlinesRequest) returns (GetKlinesResponse);

    // 获取最新成交
    rpc GetRecentTrades(GetRecentTradesRequest) returns (GetRecentTradesResponse);

    // 获取深度
    rpc GetDepth(GetDepthRequest) returns (GetDepthResponse);
}

message ListMarketsRequest {}

message ListMarketsResponse {
    repeated Market markets = 1;
}

message Market {
    string symbol = 1;              // e.g., "BTC-USDC"
    string base_token = 2;          // e.g., "BTC"
    string quote_token = 3;         // e.g., "USDC"
    int32 price_decimals = 4;       // 价格精度
    int32 amount_decimals = 5;      // 数量精度
    string min_amount = 6;          // 最小下单量
    string min_notional = 7;        // 最小名义金额
    string maker_fee_rate = 8;      // maker 费率
    string taker_fee_rate = 9;      // taker 费率
    bool is_active = 10;
}

message GetTickerRequest {
    string market = 1;
}

message GetTickerResponse {
    Ticker ticker = 1;
}

message ListTickersRequest {}

message ListTickersResponse {
    repeated Ticker tickers = 1;
}

message Ticker {
    string market = 1;
    string last_price = 2;
    string price_change = 3;        // 24h 涨跌额
    string price_change_percent = 4; // 24h 涨跌幅
    string high = 5;                // 24h 最高
    string low = 6;                 // 24h 最低
    string volume = 7;              // 24h 成交量 (base)
    string quote_volume = 8;        // 24h 成交额 (quote)
    string open = 9;                // 24h 开盘价
    string best_bid = 10;           // 最优买价
    string best_ask = 11;           // 最优卖价
    int64 timestamp = 12;
}

message GetKlinesRequest {
    string market = 1;
    string interval = 2;            // 1m, 5m, 15m, 30m, 1h, 4h, 1d, 1w
    int64 start_time = 3;           // 可选
    int64 end_time = 4;             // 可选
    int32 limit = 5;                // 默认 500, 最大 1500
}

message GetKlinesResponse {
    repeated Kline klines = 1;
}

message Kline {
    int64 open_time = 1;
    string open = 2;
    string high = 3;
    string low = 4;
    string close = 5;
    string volume = 6;
    string quote_volume = 7;
    int64 close_time = 8;
    int32 trade_count = 9;
}

message GetRecentTradesRequest {
    string market = 1;
    int32 limit = 2;  // 默认 50, 最大 100
}

message GetRecentTradesResponse {
    repeated RecentTrade trades = 1;
}

message RecentTrade {
    string trade_id = 1;
    string price = 2;
    string amount = 3;
    string quote_amount = 4;
    bool is_buyer_maker = 5;
    int64 timestamp = 6;
}

message GetDepthRequest {
    string market = 1;
    int32 limit = 2;  // 5, 10, 20, 50, 100
}

message GetDepthResponse {
    string market = 1;
    repeated PriceLevel bids = 2;
    repeated PriceLevel asks = 3;
    int64 timestamp = 4;
}

message PriceLevel {
    string price = 1;
    string amount = 2;
}
